force-app/main/default/objects/Holder_WorkGuidelines_Detail__c/Holder_WorkGuidelines_Detail__c.object-meta.xml
<CustomObject>
    <label>Holder WorkGuidelines Detail</label>
    <nameField>
        <label>Holder WorkGuidelines Detail</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holder WorkGuidelines Detail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>