force-app/main/default/objects/Holder_WorkGuidelines_Detail__c/fields/Guideline_Seq__c.field-meta.xml
<CustomField>
    <fullName>Guideline_Seq__c</fullName>
    <label>Guideline Seq</label>
    <length>255</length>
    <type>Text</type>
</CustomField>