force-app/main/default/objects/Holder_WorkGuidelines_Detail__c/fields/Guideline_Seq_Numeric__c.field-meta.xml
<CustomField>
    <fullName>Guideline_Seq_Numeric__c</fullName>
    <formula>VALUE( Guideline_Seq__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guideline Seq Numeric</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>