force-app/main/default/objects/Holder_WorkGuidelines_Detail__c/fields/Inspection_Sign_Off_Required__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Sign_Off_Required__c</fullName>
    <label>Inspection Sign Off Required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>