force-app/main/default/objects/Holder_WorkGuidelines_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Operation__c</columns>
    <columns>Test__c</columns>
    <columns>Text1Val__c</columns>
    <columns>Standard_Operation_ID__c</columns>
    <columns>Outside_Operation_Item__c</columns>
    <columns>Guideline_Seq__c</columns>
    <columns>Description__c</columns>
    <columns>Text__c</columns>
    <columns>Type__c</columns>
    <columns>Sign_Off__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>